--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <body>
 
 <header>
-    <h1>Ctrl+Code</h1>
-    <p>Coding for the Future</p>
+    <h1>Ctrl+Decode</h1>
+    <p>Coding Your Future</p>
 </header>
 
 <nav>
@@ -99,9 +99,11 @@
 </nav>
 
 <section id="about">
-    <h2>About Ctrl+Code</h2>
-    <p>Welcome to Ctrl+Code! We're an exciting program dedicated to teaching kids how to code in the world of Artificial Intelligence (AI) while exploring the important concepts of ethics and responsibility.</p>
+    <h2>About Ctrl+Decode</h2>
+    <p>Welcome to Ctrl+Decode! We're an exciting program dedicated to teaching kids how to code in the world of Artificial Intelligence (AI) while exploring the important concepts of its ethics and their responsibility.</p>
     <p>Our goal is to empower the next generation of coders to create smarter, safer, and more thoughtful technology. From basic coding principles to fun AI projects, Ctrl+Code is the perfect starting point for young minds who want to shape the future of tech!</p>
+    <p>The program will always culminate in a final project where kids will use anything from basic algorithms to advanced machine learning concepts to create a solution to a problem they're passionate about! This will fully depend on a student's comfort level with programming by the end of the sessions, and is dependent on their comfort level!</p>
+
 </section>
 
 <section id="contact">
@@ -115,10 +117,6 @@
         <button type="submit">Send Message</button>
     </form>
 </section>
-
-<footer>
-    <p>&copy; 2025 Ctrl+Code. All Rights Reserved.</p>
-</footer>
 
 </body>
 </html>
