--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         header {
-            background-color: #4CAF50;
+            background-color: #a8dcab;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -45,7 +45,7 @@
 
         h2 {
             font-size: 2em;
-            color: #4CAF50;
+            color: #a8dcab;
         }
 
         p {
@@ -73,7 +73,7 @@
         }
 
         .contact-form button {
-            background-color: #4CAF50;
+            background-color: #a8dcab;
             color: white;
             padding: 10px 20px;
             border: none;
